Bug 495486 - [BMM] Names should be wrapped
- Also, I hide the symbol compartment of package, stop using floating
labels and hide the labels of relationships.

--- a/extraplugins/bmm/org.eclipse.papyrus.bmm.diagram.common/css/BmmStyle.css
+++ b/extraplugins/bmm/org.eclipse.papyrus.bmm.diagram.common/css/BmmStyle.css
@@ -1,120 +1,154 @@
-Artifact > Compartment {
-    visible: false; 
+Package > Compartment[kind=symbol] {
+	visible: false;
 }
 
-Artifact > Compartment[kind=symbol]{
-    visible: true;
+Artifact > Compartment {
+	visible: false;
+}
+
+Artifact > Compartment[kind=symbol] {
+	visible: true;
 }
 
 Artifact {
+	isNameWrap: true;
+	textAlignment:center;
 	followSVGSymbol:true;
 	transparency:100;
-	displayName:false;
-	displayLabel:true;
-	displayTag:false;
 	bold:true;
 }
 
-Artifact> Label[kind="FloatingLabel"] {
-	displayName:true;
-	visible:true;
-	textAlignment:center;
-	isFloatingLabelConstrained:true;
-}
-
+/*Artifact> Label[kind="FloatingLabel"] {
+ 	displayName:true;
+ 	visible:true;
+ 	textAlignment:center;
+ 	isFloatingLabelConstrained:true;
+ }*/
+ 
 Dependency {
 	/*routing:tree;*/
 	routing:Rectilinear;
 	roundedBendpointsRadius:20;
 	/*avoidObstructions:true;*/
-	displayStereotypes:true;
-	displayName:false;
 }
 
-[appliedStereotypes~="Bmm::Objective"]{	
+Dependency > Label {
+	visible: false;
+}
+
+[appliedStereotypes~="Bmm::Objective"] {
 	svgFile: "platform:/plugin/org.eclipse.papyrus.bmm.diagram.common/shapes/Objective.svg";
 }
-[appliedStereotypes~="Bmm::Goal"]{
+
+[appliedStereotypes~="Bmm::Goal"] {
 	svgFile: "platform:/plugin/org.eclipse.papyrus.bmm.diagram.common/shapes/Goal.svg";
 }
-[appliedStereotypes~="Bmm::Mission"]{
+
+[appliedStereotypes~="Bmm::Mission"] {
 	svgFile: "platform:/plugin/org.eclipse.papyrus.bmm.diagram.common/shapes/Mission.svg";
 }
-[appliedStereotypes~="Bmm::Vision"]{
+
+[appliedStereotypes~="Bmm::Vision"] {
 	svgFile: "platform:/plugin/org.eclipse.papyrus.bmm.diagram.common/shapes/Vision.svg";
 }
-[appliedStereotypes~="Bmm::Tactic"]{
+
+[appliedStereotypes~="Bmm::Tactic"] {
 	svgFile: "platform:/plugin/org.eclipse.papyrus.bmm.diagram.common/shapes/Tactic.svg";
 }
-[appliedStereotypes~="Bmm::Strategy"]{
+
+[appliedStereotypes~="Bmm::Strategy"] {
 	svgFile: "platform:/plugin/org.eclipse.papyrus.bmm.diagram.common/shapes/Strategy.svg";
 }
-[appliedStereotypes~="Bmm::BusinessPolicy"]{
+
+[appliedStereotypes~="Bmm::BusinessPolicy"] {
 	svgFile: "platform:/plugin/org.eclipse.papyrus.bmm.diagram.common/shapes/BusinessPolicy.svg";
 }
-[appliedStereotypes~="Bmm::BusinessRule"]{
+
+[appliedStereotypes~="Bmm::BusinessRule"] {
 	svgFile: "platform:/plugin/org.eclipse.papyrus.bmm.diagram.common/shapes/BusinessRule.svg";
 }
-[appliedStereotypes~="Bmm::InternalInfluencer"]{
+
+[appliedStereotypes~="Bmm::InternalInfluencer"] {
 	svgFile: "platform:/plugin/org.eclipse.papyrus.bmm.diagram.common/shapes/InternalInfluencer.svg";
 }
-[appliedStereotypes~="Bmm::ExternalInfluencer"]{	
+
+[appliedStereotypes~="Bmm::ExternalInfluencer"] {
 	svgFile: "platform:/plugin/org.eclipse.papyrus.bmm.diagram.common/shapes/ExternalInfluencer.svg";
 }
-[appliedStereotypes~="Bmm::Assessment"]{	
+
+[appliedStereotypes~="Bmm::Assessment"] {
 	svgFile: "platform:/plugin/org.eclipse.papyrus.bmm.diagram.common/shapes/Assessment.svg";
 }
-[appliedStereotypes~="Bmm::Risk"]{	
+
+[appliedStereotypes~="Bmm::Risk"] {
 	svgFile: "platform:/plugin/org.eclipse.papyrus.bmm.diagram.common/shapes/Risk.svg";
 }
-[appliedStereotypes~="Bmm::PotentialReward"]{	
+
+[appliedStereotypes~="Bmm::PotentialReward"] {
 	svgFile: "platform:/plugin/org.eclipse.papyrus.bmm.diagram.common/shapes/PotentialReward.svg";
 }
-[appliedStereotypes~="Bmm::OrganizationUnit"]{	
+
+[appliedStereotypes~="Bmm::OrganizationUnit"] {
 	svgFile: "platform:/plugin/org.eclipse.papyrus.bmm.diagram.common/shapes/OrganizationUnit.svg";
 }
-[appliedStereotypes~="Bmm::Asset"]{	
+
+[appliedStereotypes~="Bmm::Asset"] {
 	svgFile: "platform:/plugin/org.eclipse.papyrus.bmm.diagram.common/shapes/Asset.svg";
 }
-[appliedStereotypes~="Bmm::BusinessProcess"]{	
+
+[appliedStereotypes~="Bmm::BusinessProcess"] {
 	svgFile: "platform:/plugin/org.eclipse.papyrus.bmm.diagram.common/shapes/BusinessProcess.svg";
 }
-[appliedStereotypes~="Bmm::OrganizationCategory"]{	
+
+[appliedStereotypes~="Bmm::OrganizationCategory"] {
 	svgFile: "platform:/plugin/org.eclipse.papyrus.bmm.diagram.common/shapes/DefaultShape.svg";
 }
-[appliedStereotypes~="Bmm::InfluencingOrganization"]{	
+
+[appliedStereotypes~="Bmm::InfluencingOrganization"] {
 	svgFile: "platform:/plugin/org.eclipse.papyrus.bmm.diagram.common/shapes/DefaultShape.svg";
 }
-[appliedStereotypes~="Bmm::InfluencerCategory"]{	
+
+[appliedStereotypes~="Bmm::InfluencerCategory"] {
 	svgFile: "platform:/plugin/org.eclipse.papyrus.bmm.diagram.common/shapes/DefaultShape.svg";
 }
-[appliedStereotypes~="Bmm::AssessmentCategory"]{	
+
+[appliedStereotypes~="Bmm::AssessmentCategory"] {
 	svgFile: "platform:/plugin/org.eclipse.papyrus.bmm.diagram.common/shapes/DefaultShape.svg";
 }
-[appliedStereotypes~="Bmm::DesiredResult"]{	
+
+[appliedStereotypes~="Bmm::DesiredResult"] {
 	svgFile: "platform:/plugin/org.eclipse.papyrus.bmm.diagram.common/shapes/DefaultShape.svg";
 }
-[appliedStereotypes~="Bmm::DesiredResultCategory"]{	
+
+[appliedStereotypes~="Bmm::DesiredResultCategory"] {
 	svgFile: "platform:/plugin/org.eclipse.papyrus.bmm.diagram.common/shapes/DefaultShape.svg";
 }
-[appliedStereotypes~="Bmm::Directive"]{	
+
+[appliedStereotypes~="Bmm::Directive"] {
 	svgFile: "platform:/plugin/org.eclipse.papyrus.bmm.diagram.common/shapes/DefaultShape.svg";
 }
-[appliedStereotypes~="Bmm::FixedAsset"]{	
+
+[appliedStereotypes~="Bmm::FixedAsset"] {
 	svgFile: "platform:/plugin/org.eclipse.papyrus.bmm.diagram.common/shapes/DefaultShape.svg";
 }
-[appliedStereotypes~="Bmm::Influencer"]{	
+
+[appliedStereotypes~="Bmm::Influencer"] {
 	svgFile: "platform:/plugin/org.eclipse.papyrus.bmm.diagram.common/shapes/DefaultShape.svg";
 }
-[appliedStereotypes~="Bmm::Liability"]{	
+
+[appliedStereotypes~="Bmm::Liability"] {
 	svgFile: "platform:/plugin/org.eclipse.papyrus.bmm.diagram.common/shapes/DefaultShape.svg";
 }
-[appliedStereotypes~="Bmm::Offering"]{	
+
+[appliedStereotypes~="Bmm::Offering"] {
 	svgFile: "platform:/plugin/org.eclipse.papyrus.bmm.diagram.common/shapes/DefaultShape.svg";
 }
-[appliedStereotypes~="Bmm::Regulation"]{	
+
+[appliedStereotypes~="Bmm::Regulation"] {
 	svgFile: "platform:/plugin/org.eclipse.papyrus.bmm.diagram.common/shapes/DefaultShape.svg";
 }
-[appliedStereotypes~="Bmm::Resource"]{	
+
+[appliedStereotypes~="Bmm::Resource"] {
 	svgFile: "platform:/plugin/org.eclipse.papyrus.bmm.diagram.common/shapes/DefaultShape.svg";
 }
+
